workspace-sf/force-app/main/default/objects/Carencia__c/Carencia__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro de carências</description>
    <label>Carência</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carências</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>