workspace-sf/force-app/main/default/objects/Carencia__c/fields/CodigoCarencia__c.field-meta.xml
<CustomField>
    <fullName>CodigoCarencia__c</fullName>
    <externalId>true</externalId>
    <label>Código da Carência</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>