workspace-sf/force-app/main/default/objects/Carencia__c/fields/FimPeriodo__c.field-meta.xml
<CustomField>
    <fullName>FimPeriodo__c</fullName>
    <label>Fim do período</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>