workspace-sf/force-app/main/default/objects/Carencia__c/fields/InicioPeriodo__c.field-meta.xml
<CustomField>
    <fullName>InicioPeriodo__c</fullName>
    <label>InicioPeriodo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>