workspace-sf/force-app/main/default/objects/Carencia__c/fields/LimitePercentual__c.field-meta.xml
<CustomField>
    <fullName>LimitePercentual__c</fullName>
    <label>Limite de percentual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>