workspace-sf/force-app/main/default/objects/Carencia__c/fields/LimiteValor__c.field-meta.xml
<CustomField>
    <fullName>LimiteValor__c</fullName>
    <label>Limite de valor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>