workspace-sf/force-app/main/default/objects/Carencia__c/fields/PeriodoMaximoCarencia__c.field-meta.xml
<CustomField>
    <fullName>PeriodoMaximoCarencia__c</fullName>
    <label>Período Máximo da Carência</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>