workspace-sf/force-app/main/default/objects/Carencia__c/fields/TipoEvento__c.field-meta.xml
<CustomField>
    <fullName>TipoEvento__c</fullName>
    <label>Tipo de evento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acidente</fullName>
            </value>
            <value>
                <fullName>Benefício</fullName>
            </value>
            <value>
                <fullName>Desemprego</fullName>
            </value>
            <value>
                <fullName>Doença</fullName>
            </value>
            <value>
                <fullName>Invalidez</fullName>
            </value>
            <value>
                <fullName>Morte</fullName>
            </value>
            <value>
                <fullName>Viagem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>