workspace-sf/force-app/main/default/objects/Carencia__c/fields/TipoPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TipoPeriodo__c</fullName>
    <label>Tipo de período</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dia(s)</fullName>
            </value>
            <value>
                <fullName>Semana(s)</fullName>
            </value>
            <value>
                <fullName>Mês(es)</fullName>
            </value>
            <value>
                <fullName>Ano(s)</fullName>
            </value>
            <value>
                <fullName>Bimestre(s)</fullName>
            </value>
            <value>
                <fullName>Trimestre(s)</fullName>
            </value>
            <value>
                <fullName>Quadrimestre(s)</fullName>
            </value>
            <value>
                <fullName>Semestre(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>