workspace-sf/force-app/main/default/objects/Carencia__c/validationRules/ValidarFormaCarenciaEscalonada.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarFormaCarenciaEscalonada</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(FormaCarencia__c, &apos;Escalonada&apos;),
    OR(
       ISBLANK(InicioPeriodo__c),
       ISBLANK(FimPeriodo__c)
    )
)</errorConditionFormula>
    <errorMessage>Preencha os dois períodos para esta Forma de carência</errorMessage>
</ValidationRule>