workspace-sf/force-app/main/default/objects/Carencia__c/validationRules/ValidarFormaCarenciaSimples.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarFormaCarenciaSimples</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(FormaCarencia__c, &apos;Simples&apos;),
    ISBLANK(InicioPeriodo__c)
)</errorConditionFormula>
    <errorMessage>Preencha o início do período para a forma de carência Simples</errorMessage>
</ValidationRule>