workspace-sf/force-app/main/default/objects/Carencia__c/validationRules/ValidarPreenchimentoFator.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoFator</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(LimitePercentual__c)),
    NOT(ISBLANK(LimiteValor__c))
)</errorConditionFormula>
    <errorMessage>Preencha somente um fator</errorMessage>
</ValidationRule>