workspace-sf/force-app/main/default/objects/Carencia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FormaCarencia__c</columns>
    <columns>TipoPeriodo__c</columns>
    <columns>ValorBase__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as carências</label>
</ListView>